codama-macros/tests/codama_attribute/on_any_item.fail.stderr
error: unrecognized type
 --> tests/codama_attribute/on_any_item.fail.rs:3:17
  |
3 | #[codama(type = invalid)]
  |                 ^^^^^^^

error: unrecognized type
 --> tests/codama_attribute/on_any_item.fail.rs:6:17
  |
6 | #[codama(type = invalid)]
  |                 ^^^^^^^

error: unrecognized type
 --> tests/codama_attribute/on_any_item.fail.rs:9:17
  |
9 | #[codama(type = invalid)]
  |                 ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_any_item.fail.rs:12:17
   |
12 | #[codama(type = invalid)]
   |                 ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_any_item.fail.rs:15:17
   |
15 | #[codama(type = invalid)]
   |                 ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_any_item.fail.rs:18:17
   |
18 | #[codama(type = invalid)]
   |                 ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_any_item.fail.rs:21:17
   |
21 | #[codama(type = invalid)]
   |                 ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_any_item.fail.rs:24:17
   |
24 | #[codama(type = invalid)]
   |                 ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_any_item.fail.rs:27:17
   |
27 | #[codama(type = invalid)]
   |                 ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_any_item.fail.rs:32:17
   |
32 | #[codama(type = invalid)]
   |                 ^^^^^^^
